--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ua.at.tsvetkov.tdataprocessor"
+    package="ua.at.tsvetkov.data_processor"
     android:versionCode="1"
     android:versionName="1.0" >
 
