--- a/taodataprocessor/build.gradle
+++ b/taodataprocessor/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.0'
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 8
@@ -27,12 +27,6 @@ android {
 dependencies {
     compile project(':taocore')
     compile 'com.android.support:support-v4:23.0.0'
-//    compile 'org.apache.httpcomponents:httpclient:4.5'
-//    compile 'org.apache.httpcomponents:httpcore:4.5'
-//    compile('org.apache.httpcomponents:httpmime:4.5') {
-        // avoid "is ignored for the default configuration X" warnings
-        // since httpclient is included in the android SDK.
-//        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
-//    }
+    compile 'com.android.support:support-annotations:23.0.1'
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.1'
 }
