--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,22 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/lordtao/maven"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/lordtao/maven"
+        }
     }
 }
