--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 include ':taodataprocessor'
-def taoCoreDir = file('../android-tao-core/taocore')
-def rootProjectDescriptor = settings.rootProject
-settings.createProjectDescriptor(rootProjectDescriptor, 'taocore', taoCoreDir)
-include ':taocore'
+//def taoCoreDir = file('../android-tao-core/taocore')
+//def rootProjectDescriptor = settings.rootProject
+//settings.createProjectDescriptor(rootProjectDescriptor, 'taocore', taoCoreDir)
+//include ':taocore'
