--- a/taodataprocessor/build.gradle
+++ b/taodataprocessor/build.gradle
@@ -1,4 +1,18 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+def versionMajor = 1
+def versionMinor = 2
+def versionPatch = 1
+
+version = "${versionMajor}.${versionMinor}.${versionPatch}"
+group = "ua.at.tsvetkov"
+
+def gitUser = "lordtao"
+def gitProject = "android-tao-rest-data-processor"
+def siteUrl = 'https://github.com/${gitUser}/${gitProject}'
+def gitUrl = 'https://github.com/${gitUser}/${gitProject}.git'
 
 android {
     compileSdkVersion 23
@@ -7,6 +21,8 @@ android {
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 23
+        versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
+        versionName version
     }
 
     buildTypes {
@@ -25,8 +41,79 @@ android {
 }
 
 dependencies {
-    compile project(':taocore')
-    compile 'com.android.support:support-v4:23.0.0'
-    compile 'com.android.support:support-annotations:23.0.1'
+    compile 'ua.at.tsvetkov:taocore:1.2.15'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.1'
+}
+
+// Hide properties from ext users
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = gitProject
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["BSD 3-Clause"]
+        publish = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        pom {
+            project {
+                packaging 'aar'
+                name 'Android Data Processor. Easy to build a REST, file request, to receive and processing data (XML, JSON, CSV and etc.)'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'BSD 3-Clause'
+                        url 'http://opensource.org/licenses/BSD-3-Clause'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'lordtao'
+                        name 'Alexandr Tsvetkov'
+                        email 'tsvetkov2010@gmail.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+task findConventions << {
+    println project.getConvention()
 }
