--- a/taodataprocessor/src/main/AndroidManifest.xml
+++ b/taodataprocessor/src/main/AndroidManifest.xml
@@ -1,14 +1,6 @@
-<manifest
-    package="ua.at.tsvetkov.data_processor"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="4"
-    android:versionName="1.1.00">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ua.at.tsvetkov.data_processor">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19"/>
-
-    <application android:allowBackup="true">
-    </application>
+    <application android:allowBackup="true"></application>
 
 </manifest>
