--- a/taodataprocessor/build.gradle
+++ b/taodataprocessor/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 
 def versionMajor = 1
 def versionMinor = 2
-def versionPatch = 8
+def versionPatch = 10
 
 version = "${versionMajor}.${versionMinor}.${versionPatch}"
 group = "ua.at.tsvetkov"
@@ -50,7 +50,6 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.4'
 }
 
-
 //// Hide properties from ext users
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
@@ -70,6 +69,21 @@ bintray {
 }
 
 install {
+        pom {
+        project {
+            packaging 'aar'
+            name 'Alexandr Tsvetkov'
+            url 'siteUrl'
+            licenses {
+                license {
+                    name 'BSD 3-Clause'
+                    url 'hhttp://opensource.org/licenses/BSD-3-Clause'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.writeTo("$buildDir/poms/pom-default.xml")
+
     repositories.mavenInstaller {
         pom {
             project {
@@ -98,3 +112,20 @@ install {
         }
     }
 }
+
+//task writeNewPom {
+//    pom {
+//        project {
+//            packaging 'aar'
+//            name 'Alexandr Tsvetkov'
+//            url 'siteUrl'
+//            licenses {
+//                license {
+//                    name 'BSD 3-Clause'
+//                    url 'hhttp://opensource.org/licenses/BSD-3-Clause'
+//                    distribution 'repo'
+//                }
+//            }
+//        }
+//    }.writeTo("$buildDir/poms/pom-default.xml")
+//}
